--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Nathan Robinson",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
     "express": "^4.17.1",
