--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -43,6 +44,5 @@
       "last 1 safari version"
     ]
   },
-
   "proxy": "http://localhost:5001"
 }
