--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client \""
   },
   "author": "Nathan Robinson",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
+    "client": "^0.0.1",
     "config": "^3.3.6",
+    "create-react-app": "^5.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "gravatar": "^1.8.2",
